29-Network-Policies/8-pod-mysql-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-mysql-client
  labels:
    app: pod-mysql-client
    role: mysql-client
spec:
  containers:
  - name: mysql-container
    image: ghcr.io/wiktorvip/mysql-client:v4
    command: ['sh','-c', "sleep 1800m"]
    imagePullPolicy: IfNotPresent
