29-Network-Policies/3-POD-app-web-conntest-red.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app-web-conntest-red
    role: red
  name: app-web-conntest-red
  namespace: default
spec:
  containers:
  - name: app-web-conntest
    image: ghcr.io/wiktorvip/app-web-conntest:v2
    imagePullPolicy: Always
    ports:
    - containerPort: 9050
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app-web-conntest-red
  namespace: default
spec:
  ports:
  - nodePort: 30012
    port: 9050
    protocol: TCP
    targetPort: 9050
  selector:
    app: app-web-conntest-red
  type: NodePort
