29-Network-Policies/POD-app-web-conntest.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app-web-conntest
  name: app-web-conntest
  namespace: default
spec:
  containers:
  - name: test
    image: ghcr.io/wiktorvip/app-web-conntest:v2
    imagePullPolicy: Always
    ports:
    - containerPort: 9050
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app-web-conntest
  namespace: default
spec:
  ports:
  - nodePort: 30066
    port: 9050
    protocol: TCP
    targetPort: 9050
  selector:
    app: app-web-conntest
  type: NodePort
